--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -48,32 +48,60 @@ services:
       # NEXT_ANALYTICS_BACKEND_PROVIDER: bigquery
 
   kong:
-    container_name: supabase-kong
-    image: kong:2.8.1
-    restart: unless-stopped
-    # https://unix.stackexchange.com/a/294837
-    entrypoint: bash -c 'eval "echo \"$$(cat ~/temp.yml)\"" > ~/kong.yml && /docker-entrypoint.sh kong docker-start'
-    ports:
-      - ${KONG_HTTP_PORT}:8000/tcp
-      - ${KONG_HTTPS_PORT}:8443/tcp
-    depends_on:
-      analytics:
-        condition: service_healthy
-    environment:
-      KONG_DATABASE: "off"
-      KONG_DECLARATIVE_CONFIG: /home/kong/kong.yml
-      # https://github.com/supabase/cli/issues/14
-      KONG_DNS_ORDER: LAST,A,CNAME
-      KONG_PLUGINS: request-transformer,cors,key-auth,acl,basic-auth
-      KONG_NGINX_PROXY_PROXY_BUFFER_SIZE: 160k
-      KONG_NGINX_PROXY_PROXY_BUFFERS: 64 160k
-      SUPABASE_ANON_KEY: ${ANON_KEY}
-      SUPABASE_SERVICE_KEY: ${SERVICE_ROLE_KEY}
-      DASHBOARD_USERNAME: ${DASHBOARD_USERNAME}
-      DASHBOARD_PASSWORD: ${DASHBOARD_PASSWORD}
-    volumes:
-      # https://github.com/supabase/supabase/issues/12661
-      - ./volumes/api/kong.yml:/home/kong/temp.yml:ro
+  container_name: supabase-kong
+  image: "${KONG_DOCKER_TAG:-kong:latest}"
+  restart: unless-stopped
+  # https://unix.stackexchange.com/a/294837
+  entrypoint: >
+    bash -c 'eval "echo "$$(cat /usr/local/kong/kong-temp.yml)"" >
+    /usr/local/kong/kong.yml &&
+    /docker-entrypoint.sh kong docker-start'
+  healthcheck:
+    test: [ "CMD", "kong", "health" ]
+    interval: 10s
+    timeout: 10s
+    retries: 10
+  networks:
+    - kong-net
+  ports:
+    - ${KONG_HTTP_PORT}:8000/tcp
+    - ${KONG_HTTPS_PORT}:8443/tcp
+    - ${KONG_ADMIN_API_PORT}:8001
+    - ${KONG_ADMIN_API_SECURE_PORT}:8444
+    - ${KONG_ADMIN_GUI_PORT}:8002
+    - ${KONG_ADMIN_GUI_SECURE_PORT}:8445
+  depends_on:
+    analytics:
+      condition: service_healthy
+  environment:
+    KONG_DECLARATIVE_CONFIG: /usr/local/kong/kong.yml
+    # supabase/cli#14
+    KONG_DATABASE: ${KONG_DATABASE:-off}
+    KONG_PG_HOST: ${POSTGRES_HOST:-db}
+    KONG_PG_PORT: ${POSTGRES_PORT}
+    KONG_PG_USER: ${POSTGRES_USER}
+    KONG_PG_PASSWORD: ${POSTGRES_PASSWORD}
+    KONG_PG_DATABASE: ${POSTGRES_DB}
+    KONG_PG_SCHEMA: ${KONG_PG_SCHEMA:-kong}
+    KONG_DNS_ORDER: LAST,A,CNAME
+    KONG_PLUGINS: >
+      request-transformer,cors,key-auth,acl,basic-auth,session,oauth2,jwt,acme,
+      rate-limiting,request-size-limiting,prometheus,pre-function,post-function,
+      request-termination,correlation-id,request-transformer,response-transformer,
+      grpc-gateway,grpc-web
+    KONG_NGINX_PROXY_PROXY_BUFFER_SIZE: 160k
+    KONG_NGINX_PROXY_PROXY_BUFFERS: 64 160k
+    SUPABASE_ANON_KEY: ${ANON_KEY}
+    SUPABASE_SERVICE_KEY: ${SERVICE_ROLE_KEY}
+    DASHBOARD_USERNAME: ${DASHBOARD_USERNAME}
+    DASHBOARD_PASSWORD: ${DASHBOARD_PASSWORD}
+    KONG_ADMIN_LISTEN: "0.0.0.0:8001, 0.0.0.0:8444 ssl"
+    KONG_ADMIN_GUI_LISTEN: "0.0.0.0:8002, 0.0.0.0:8445 ssl"
+    KONG_ADMIN_GUI_URL: http://localhost:8002
+  volumes:
+    # #12661
+    - ./volumes/api/kong.yml:/usr/local/kong/kong-temp.yml
+
 
   auth:
     container_name: supabase-auth
