--- a/docker/.env.example
+++ b/docker/.env.example
@@ -31,9 +31,15 @@ POOLER_TENANT_ID=your-tenant-id
 ############
 # API Proxy - Configuration for the Kong Reverse proxy.
 ############
-
+KONG_DATABASE=postgres
+KONG_PG_SCHEMA=gateway
+KONG_DOCKER_TAG=kong:3.7.1-ubuntu
 KONG_HTTP_PORT=8000
 KONG_HTTPS_PORT=8443
+KONG_ADMIN_API_PORT=8001
+KONG_ADMIN_API_SECURE_PORT=8444
+KONG_ADMIN_GUI_PORT=8002
+KONG_ADMIN_GUI_SECURE_PORT=8445
 
 
 ############
